--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "fotografia-zoltan-mg",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://zoltanmg.github.io/fotografia-zoltan-mg/",
+    "homepage": " https://www.tabogo.online/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
